# Estruturas-de-dados-Compactas

./: .gitignore  CMakeLists.txt  LICENSE  README.md  log  rank-test.cpp  teste_rank1
doc/: PLANO.md
doc/Examples/: extend-logic.txt
doc/Jacobson/chapter-5/: techniques-of-abstract-optimization.md
doc/Navarro/: Chapter-2.md
doc/Navarro/chapter-2/: entropy&coding.md
doc/Navarro/chapter-4/: bitvectors.md
include/: RRR.h  binary_tree.h  bitvector.h  bitvectorRRR.h  bp.h  dfs.h  dll.h  endian.h  general_tree.h  huffman.h  jacobsonrank.h  ll2.h  louds.h  queue.h  stack.h  wt.h
include/GPT-originals/: bits.h  bitsequence.h  bitvectorRRR.h  mask01.h  mask10.h  masks0.h  masks1.h  uvector.h
src/: CMakeLists.txt  RRR.cpp  a.out  bitvector.cpp  bp.cpp  general-tree.cpp  huffman.cpp  jacobsonrank.cpp  louds.cpp  wt.cpp
src/GPT-originals/: CMakeLists.txt  bits-tester.cpp  bits.cpp  bitsequence.cpp  bitvectorRRR.cpp  endian-tester.c  endian.c  uarray-tester.c  uarray.c  uvector.cpp
src/graphs/: graph.py
src/implementation/: Teste1.txt  bits-tester.cpp  bits.cpp  bits.h  bitvector-tester.cpp  bitvector-tester.execlear  bitvector.cpp  bitvector.h  endian-tester.c  endian-tester.cpp  endian.c  endian.cpp  endian.h  general_tree_2n.c  jacobsonrank-tester.cpp  jacobsonrank.cpp  jacobsonrank.h  uarray.c  utils-tester.cpp
src/masks/: mask01.cpp  mask10.cpp  masks0.cpp  masks1.cpp
src/utils/: CMakeLists.txt  binary_search.cpp  binary_tree.cpp  bitsequence.cpp  dfs.c  dfs.cpp  dll.c  dll.cpp  general_tree.cpp  ll1.c  ll2.c  ll2.cpp  queue.c  queue.cpp  stack.c  stack.cpp  uvector.cpp
tests/: CMakeLists.txt  RRR-tester.cpp  balanced_parenthesis-tester.cpp  binary_tree-tester.cpp  bits-tester.cpp  bitvector-tester.cpp  bitvectorRRR-tester.cpp  dfs-tester.cpp  dll-tester.c  dll-tester.cpp  huffman-tester.cpp  input_1M.txt  jacobsonrank-tester.cpp  ll2-tester.c  ll2-tester.cpp  new_bitvector_tester.cpp  uarray-tester.c  utils-tester.cpp  wavelet_tree-tester.cpp  wt-tester.cpp
tests/benchmarks-results/: 512.txt  512_ss.txt  CMakeLists.txt  log.txt  log_ss.txt  nbits.txt  nbits_ss.txt  ns_select0_log.txt  ns_select0_nbits.txt  ns_select0_nbits512.txt  ns_select1_log.txt  ns_select1_nbits.txt  ns_select1_nbits512.txt  rank0_RRR.txt  rank0_log.txt  rank0_nbits.txt  rank0_nbits512.txt  rank0_test  rank1_RRR.txt  rank1_log.txt  rank1_nbits.txt  rank1_nbits512.txt  rank1_test  select0_log.txt  select0_nbits.txt  select0_nbits512.txt  select0_test  select1_log.txt  select1_nbits.txt  select1_nbits512.txt  select1_test
